# menu-stnico

./: .gitignore  2025_q4_menu.ics  2025_q4_menu.json  2025_q4_menu_fixed.ics  LICENSE  README.md  README_daily_message.md  daily_menu_message.py  env.example  holidays_2025_2026.json  index.html  load_env.py  menu_parser.py  pyproject.toml  regenerate_html_ics.py  send_daily_menu.sh  sobre.html  test_menu_parser.py
.github/workflows/: daily-menu.yml
