[project]
name = "menustnico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "icalendar>=6.3.1",
    "opendataloader-pdf>=1.0.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytz>=2025.2",
]
